apply patch from SERVER-2839 to fix mongo crash